<!--
  ~ Copyright (c) 2016. Jahir Fiquitiva
  ~
  ~ Licensed under the CreativeCommons Attribution-ShareAlike
  ~ 4.0 International License. You may not use this file except in compliance
  ~ with the License. You may obtain a copy of the License at
  ~
  ~    http://creativecommons.org/licenses/by-sa/4.0/legalcode
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Medicode</string>
    <string name="prof_card_n">Professional card: %1$s</string>
    <string name="cc">ID: %1$s</string>
    <string name="doctor_n">Doctor: %1$s</string>
    <string name="patient_n">Patient: %1$s</string>
    <string name="appntmnt_n">Appointment: %1$s</string>
    <string name="specialization_n">Specialization: %1$s</string>
    <string name="title_activity_login">Log in</string>
    <string name="create">Create account</string>
    <string name="login">Log in</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="master_password">Admin password</string>
    <string name="showPassword">Show password</string>
    <string name="error">Error</string>
    <string name="invalid_user">Incorrect password. Please, try again.</string>
    <string name="user_does_not_exist">User is not registered in our database.</string>
    <string name="sort">Sort</string>
    <string name="sort_by_id">Sort by ID</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_gender">Sort by gender</string>
    <string name="search">Search</string>
    <string name="closing_app">Too many failed attempts. App will close now.</string>
    <string name="exit">Exit</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="save_data">Save data</string>
    <string name="save_data_confirmation">Do you want to save app data?</string>
    <string name="permission_rationale">"We need permission to read and save data"</string>
    <string name="permission_denied">Permissions to save data were denied before, do you want to accept them now?</string>
    <string name="permission_denied_sec">Permissions to save data were denied and therefore no data will be saved.</string>
    <string name="permission_completely_denied">Permissions to save data were denied completely and therefore no data will be saved.</string>
    <string name="load_data">Load data</string>
    <string name="load_data_content">Do you want to load previous app data?</string>
    <string name="title_activity_create_doctor">Add doctor</string>
    <string name="doctor">Doctor</string>
    <string name="doctors">Doctors</string>
    <string name="id">ID</string>
    <string name="professional_card">Professional Card</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="rh">Blood group</string>
    <string name="eps">EPS</string>
    <string name="specialization">Specialization</string>
    <string name="full_name">Full name</string>
    <string name="success">Success</string>
    <string name="doctor_success">Doctor was successfully added. Do you want to add another one?</string>
    <string name="doctor_error">Doctor is already registered in our database.</string>
    <string name="doctor_not_filled">Error!\nYou haven\'t filled all required doctor fields. Please, try again.</string>
    <string name="appntmnt_not_filled">Appointment data was not properly registered. Please, try again.</string>
    <string name="appntmnt_success">Appointment has been scheduled successfully. Do you want to schedule another one?</string>
    <string name="appntmnt_error">An appointment with another %1$s, is already scheduled, with the same date, in our database.</string>
    <string name="appntmnts">Appointments</string>
    <string name="doc_appntmnts">Agenda</string>
    <string name="patient">Patient</string>
    <string name="patients">Patients</string>
    <string name="date">Date</string>
    <string name="tap_to_choose_date">Tap to choose date</string>
    <string name="tap_to_choose_doctor">Tap to choose doctor</string>
    <string name="tap_to_choose_patient">Tap to choose patient</string>
    <string name="not_enough_patients">Not enough patients to schedule an appointment for.</string>
    <string name="not_enough_doctors">Not enough doctors to ask for an appointment to.</string>
    <string name="full_date">%2$s, %1$s  %3$s   at  %4$s</string>
    <string name="appointment_time">Appointment time</string>
    <string name="search_x">Search for %1$s…</string>
    <string name="about">About</string>
    <string name="jahir_info">App developed by Jahir Fiquitiva.\nID: 201521721</string>
    <string name="title_activity_create_patient">Add patient</string>
    <string name="patient_success">Patient has been successfully added. Do you want to add another one?</string>
    <string name="patient_error">Patient is already registered in our database.</string>
    <string name="patient_not_filled">Error!\nYou haven\'t filled all required patient fields. Please, try again. Keep in mind ID must have at least 4 digits and max 10.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="tap_to_choose_gender">Tap to choose a gender</string>
    <string name="tap_to_choose_rh">Tap to choose a blood group</string>
    <string name="tap_to_choose_specialization">Tap to choose a specialization</string>
    <string name="appntmnt_with">Appointment type: %1$s</string>
    <string name="years_limit">0 ~ 140 years</string>
    <string name="create_new">Create new…</string>
    <string name="not_enough_to_search">There are not enough %1$s to search. Add some first.</string>
    <string name="time_not_properly_set">Appointment time was not selected</string>
    <string name="title_activity_create_appntmnt">Add appointment</string>
    <string name="no_results">There are no elements that match search.</string>
    <string name="not_enough_to_show">There are no %1$s. Add some by pressing the bottom right button.</string>
    <string name="not_enough_appntmnts_to_show">There are no appointments. Add some by pressing the bottom right button.</string>
    <string name="unknown">Unknown</string>
</resources>