<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Jahir Fiquitiva
  ~
  ~ Licensed under the CreativeCommons Attribution-ShareAlike
  ~ 4.0 International License. You may not use this file except in compliance
  ~ with the License. You may obtain a copy of the License at
  ~
  ~    http://creativecommons.org/licenses/by-sa/4.0/legalcode
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/user"
            android:textSize="14sp"
            android:textAppearance="@style/SecondaryText"/>

    <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:textSize="18sp"
            android:hint="@string/user"
            android:textAppearance="@style/PrimaryText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/password"
            android:textSize="14sp"
            android:textAppearance="@style/SecondaryText"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:hint="@string/password"
            android:textAppearance="@style/PrimaryText"/>

    <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/showPassword"
            android:textSize="18sp"
            android:textAppearance="@style/PrimaryText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/master_password"
            android:textSize="14sp"
            android:textAppearance="@style/SecondaryText"/>

    <EditText
            android:id="@+id/masterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:hint="@string/master_password"
            android:textAppearance="@style/PrimaryText"/>

</LinearLayout>