<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Jahir Fiquitiva. Android Developer. All rights reserved.
  -->

<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:clipChildren="false"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/appBar"
            android:elevation="4dp"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:contentInsetStart="@dimen/second_keyline"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:title="@string/title_activity_create_doctor"
                android:theme="@style/Toolbar.AppCompat.Responsive"
                android:popupTheme="@style/Toolbar.Popup.AppCompat"
                app:layout_scrollFlags="enterAlways"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_below="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/full_name"
                android:textSize="14sp"
                android:textAppearance="@style/SecondaryText"/>

        <LinearLayout
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_marginLeft="@dimen/icon_margin"
                    android:tint="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="@dimen/item_margin"
                    android:paddingRight="@dimen/item_margin"
                    app:srcCompat="@drawable/ic_patient"
                    tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry"/>

            <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/field_margin"
                    android:layout_marginStart="@dimen/field_margin"
                    android:layout_marginRight="@dimen/field_margin_r"
                    android:layout_marginEnd="@dimen/field_margin_r"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:hint="@string/full_name"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/tertiary_text"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:background="?dividerHorizontal"
                android:layout_marginTop="8dp"
                android:layout_height="1dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/id"
                android:textSize="14sp"
                android:textAppearance="@style/SecondaryText"/>

        <LinearLayout
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_marginLeft="@dimen/icon_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_id"
                    android:paddingEnd="@dimen/item_margin"
                    android:paddingRight="@dimen/item_margin"
                    tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry"/>

            <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/field_margin"
                    android:layout_marginStart="@dimen/field_margin"
                    android:layout_marginRight="@dimen/field_margin_r"
                    android:layout_marginEnd="@dimen/field_margin_r"
                    android:inputType="number"
                    android:textSize="18sp"
                    android:maxLength="10"
                    android:hint="@string/id"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/tertiary_text"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:background="?dividerHorizontal"
                android:layout_marginTop="8dp"
                android:layout_height="1dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/specialization"
                android:textSize="14sp"
                android:textAppearance="@style/SecondaryText"/>

        <LinearLayout
                android:id="@+id/specializationLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_marginLeft="@dimen/icon_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_specialization"
                    android:paddingEnd="@dimen/item_margin"
                    android:paddingRight="@dimen/item_margin"
                    tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry"/>

            <TextView
                    android:id="@+id/specialization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:layout_marginBottom="@dimen/item_margin"
                    android:layout_marginLeft="@dimen/field_margin_l"
                    android:layout_marginStart="@dimen/field_margin_l"
                    android:layout_marginRight="@dimen/field_margin_r"
                    android:layout_marginEnd="@dimen/field_margin_r"
                    android:textSize="18sp"
                    android:hint="@string/specialization"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/tertiary_text"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:background="?dividerHorizontal"
                android:layout_marginTop="8dp"
                android:layout_height="1dp"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            app:layout_behavior="jahirfiquitiva.apps.medicode.views.ScrollAwareFABBehavior"
            app:srcCompat="@drawable/ic_check"
            app:backgroundTint="@color/fab_two"
            app:fabSize="normal"
            app:rippleColor="@color/semitransparent_white"/>

</android.support.design.widget.CoordinatorLayout>